# notebooklm-wrapper

./: .gitignore  LICENSE  README.md  pyproject.toml
.cursor/plans/: notebooklm_mcp_wrapper_6d8d8ff0.plan.md
.github/workflows/: publish.yml  test.yml
docs/: cli-json-output-mapping.md  multi-user-credentials-design.md  research-start-failure-investigation.md
scripts/: publish.sh  test_cookie_list_notebooks.py  test_oauth_list_notebooks.py
src/notebooklm_wrapper/: __init__.py  _mcp_client.py  async_client.py  client.py  constants.py  exceptions.py  models.py
src/notebooklm_wrapper/resources/: __init__.py  auth.py  base.py  chat.py  download.py  export.py  note.py  notebook.py  research.py  share.py  source.py  studio.py
tests/: conftest.py  test_async.py  test_auth.py  test_chat.py  test_client.py  test_download.py  test_exceptions.py  test_export.py  test_mcp_client.py  test_models.py  test_note.py  test_notebook.py  test_research.py  test_share.py  test_source.py  test_studio.py
